--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,14 +34,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  firebase_core: ^3.14.0
-  firebase_auth: ^5.6.0
   get: ^4.7.2
-  cloud_firestore: ^5.6.9
   file_picker: ^10.2.0
-  firebase_storage: ^12.4.8
   path_provider: ^2.1.5
-  open_file: ^3.5.10
+  url_launcher: ^6.3.2
+  http: ^1.4.0
+  supabase_flutter: ^2.9.1
+  intl: ^0.20.2
+  permission_handler: ^12.0.1
 
 dev_dependencies:
   flutter_test:
